fix: Rotate the arrow icon when expand/collapse the test report (#952)

--- a/resources/templates/scss/report.scss
+++ b/resources/templates/scss/report.scss
@@ -31,3 +31,7 @@ code.word-break-all {
 pre.pre-wrap {
     white-space: pre-wrap;
 }
+
+.rotate {
+    transform: rotate(90deg);
+}
